Stop double counting link rel preload preloads for metrics tracking

BUG=662999

Review-Url: https://codereview.chromium.org/2484823002
Cr-Commit-Position: refs/heads/master@{#431909}

Former-commit-id: b16ccbe3a354e81615ebf805b503a0fae5362492